@@ -1,4 +1,4 @@
-<?
+<?php
 include("config.php");
 
 updatecookie();
@@ -58,13 +58,13 @@ if(!isset($destination))
 {
   echo "<FORM ACTION=rsmove.php METHOD=POST>";
   $l_rs_insector=str_replace("[sector]",$playerinfo[sector],$l_rs_insector);
-  $l_rs_insector=str_replace("[sector_max]",$sector_max,$l_rs_insector);
+  $l_rs_insector=str_replace("[sector_max]",$sector_max-1,$l_rs_insector);
   echo "$l_rs_insector<BR><BR>";
   echo "$l_rs_whichsector:  <INPUT TYPE=TEXT NAME=destination SIZE=10 MAXLENGTH=10><BR><BR>";
   echo "<INPUT TYPE=SUBMIT VALUE=$l_rs_submit><BR><BR>";
   echo "</FORM>";
 }
-elseif (($destination <= $sector_max && empty($engage)) || ($destination <= $sector_max && $triptime > 100 && $engage == 1))
+elseif (($destination <= $sector_max-1 && empty($engage)) || ($destination <= $sector_max-1 && $triptime > 100 && $engage == 1))
 {
   if($playerinfo[dev_fuelscoop] == "Y")
   {
@@ -103,7 +103,7 @@ elseif (($destination <= $sector_max && empty($engage)) || ($destination <= $sec
     echo "$l_rs_engage<BR><BR>";
   }
 }
-elseif($destination <= $sector_max && $engage > 0)
+elseif($destination <= $sector_max-1 && $engage > 0)
 {
   if($playerinfo[dev_fuelscoop] == "Y")
   {
